# container-diff

./: .container-diff-tests.sh  .gitignore  .gofmt.sh  .travis.yml  BUILD  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.build  Gopkg.toml  MAINTAINERS  Makefile  README.md  RELEASING.md  SECURITY.md  WORKSPACE  action.yml  cloudbuild-release.yaml  cloudbuild.yaml  code-of-conduct.md  docker_diff.bzl  go.mod  go.sum  main.go  test.sh
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
.github/workflows/: build.yaml  ci.yml  test-action.yaml
Godeps/: Godeps.json
actions/: Dockerfile  README.md  action.yaml  entrypoint.sh
boilerplate/: boilerplate.Dockerfile.txt  boilerplate.go.txt  boilerplate.py  boilerplate.py.txt
cmd/: BUILD.bazel  analyze.go  analyze_test.go  diff.go  diff_test.go  root.go  root_test.go  version.go
cmd/util/output/: BUILD.bazel
differs/: BUILD.bazel  apk_diff.go  apk_diff_test.go  aptDiff.go  aptDiff_test.go  apt_diff.go  apt_diff_test.go  differs.go  differs_test.go  emerge_diff.go  emerge_diff_test.go  fileDiff.go  file_diff.go  gem_diff.go  gem_diff_test.go  historyDiff.go  history_diff.go  metadata_diff.go  nodeDiff.go  nodeDiff_test.go  node_diff.go  node_diff_test.go  package_differs.go  php_diff.go  php_diff_test.go  pipDiff.go  pipDiff_test.go  pip_diff.go  pip_diff_test.go  rpm_diff.go  rpm_diff_test.go  size_diff.go  util.go
differs/testDirs/: exact.json  extra.json
differs/testDirs/packageEmerge/var/db/pkg/dev-python/pkg2-0.0.2/: SIZE
differs/testDirs/packageOne/lib/apk/db/: installed
differs/testDirs/packageOne/var/lib/dpkg/: status
hack/: release.sh
hack/hooks/: pre-commit
hack/release_notes/: listpullreqs.go
pkg/cache/: BUILD.bazel  cache.go  file_cache.go
pkg/image/: BUILD.bazel  mutable_source.go  mutable_source_test.go  proxy_types.go
pkg/util/: BUILD.bazel  cloud_prepper.go  cmd_utils.go  daemon_prepper.go  docker_utils.go  fs_utils.go  image_prep_utils.go  image_prepper.go  image_utils.go  tar_prepper.go  tar_utils.go  test_utils.go  transport_builder.go  transport_utils.go
pkg/util/preppers/: cloud_prepper.go  id_prepper.go  tar_prepper.go
setup-tests/: Dockerfile.diffBase  Dockerfile.diffLayerBase  Dockerfile.diffLayerModified  Dockerfile.diffModified  README.md  init-tests.sh
tests/: analyzer_runs.txt  apt_analysis_expected.json  apt_diff_expected.json  apt_sorted_diff_expected.json  diff_comparisons.txt  differ_runs.txt  file_diff_expected.json  file_layer_analysis_expected.json  file_layer_diff_expected.json  file_sorted_analysis_expected.json  hist_diff_expected.json  integration_test.go  metadata_diff_expected.json  multi_diff_expected.json  multi_hist_diff_expected.json  multi_version_packages_test_processor.py  node_analysis_expected.json  node_diff_expected.json  node_diff_order_expected.json  pip_analysis_expected.json  pip_diff_expected.json  preprocess_files.txt  rpm_analysis_expected.json  rpm_diff_expected.json  size_analysis_expected.json  size_diff_expected.json  size_layer_analysis_expected.json  size_layer_diff_expected.json  test_analyzer_runs.txt  test_differ_runs.txt  test_run_comparisons.txt
util/: BUILD.bazel  analyze_output_utils.go  diff_output_utils.go  diff_utils.go  file_cache_test.go  format_utils.go  fs_utils_test.go  image_utils_test.go  output_sort_utils.go  output_sort_utils_test.go  output_text_utils.go  package_diff_utils.go  package_diff_utils_test.go  size_utils.go  tar_utils_test.go  template_utils.go
util/testTars/la-croix-update-actual/: lime.txt
util/testTars/la-croix3-actual/: nested-dir.tar
util/test_files/dir2/: file2
util/test_files/dir2_modified/: file2
utils/: analyze_output_utils.go  analyze_output_utils_test.go  diff_output_utils.go  diff_utils.go  docker_utils.go  docker_utils_test.go  format_utils.go  fs_utils.go  fs_utils_test.go  image_prep_utils.go  image_utils.go  image_utils_test.go  output_sort_utils.go  output_sort_utils_test.go  output_text_utils.go  output_utils.go  package_diff_utils.go  package_diff_utils_test.go  tar_utils.go  tar_utils_test.go  template_utils.go
utils/testTars/: la-croix-dir-update.tar  la-croix-update.tar  la-croix-wh.tar  la-croix1.tar  la-croix2.tar  la-croix3-actual.json  la-croix3-shallow.json  la-croix3.tar
utils/test_files/: dir.json  dir_bad.json  file2
version/: BUILD.bazel  version.go
