load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "analyze.go",
        "diff.go",
        "root.go",
        "version.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/container-diff/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/util/output:go_default_library",
        "//differs:go_default_library",
        "//pkg/cache:go_default_library",
        "//pkg/util:go_default_library",
        "//util:go_default_library",
        "//version:go_default_library",
        "@com_github_containers_image//docker:go_default_library",
        "@com_github_docker_docker//client:go_default_library",
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "analyze_test.go",
        "diff_test.go",
        "root_test.go",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/GoogleCloudPlatform/container-diff/cmd",
)
