load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "analyze.go",
        "diff.go",
        "root.go",
        "version.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/container-diff/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/util/output:go_default_library",
        "//differs:go_default_library",
        "//pkg/cache:go_default_library",
        "//pkg/util:go_default_library",
        "//util:go_default_library",
        "//vendor/github.com/containers/image/docker:go_default_library",
        "//vendor/github.com/docker/docker/client:go_default_library",
        "//vendor/github.com/mitchellh/go-homedir:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//version:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "analyze_test.go",
        "diff_test.go",
        "root_test.go",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/GoogleCloudPlatform/container-diff/cmd",
)
