load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "apt_diff.go",
        "differs.go",
        "file_diff.go",
        "history_diff.go",
        "node_diff.go",
        "package_differs.go",
        "pip_diff.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/container-diff/differs",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util:go_default_library",
        "//util:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "apt_diff_test.go",
        "node_diff_test.go",
        "pip_diff_test.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/container-diff/differs",
    library = ":go_default_library",
    deps = [
        "//pkg/util:go_default_library",
        "//util:go_default_library",
    ],
)
