load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "apt_diff.go",
        "differs.go",
        "file_diff.go",
        "history_diff.go",
        "metadata_diff.go",
        "node_diff.go",
        "package_differs.go",
        "pip_diff.go",
        "rpm_diff.go",
    ],
    importpath = "github.com/GoogleContainerTools/container-diff/differs",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util:go_default_library",
        "//util:go_default_library",
        "//vendor/github.com/fsouza/go-dockerclient:go_default_library",
        "//vendor/github.com/google/go-containerregistry/name:go_default_library",
        "//vendor/github.com/google/go-containerregistry/v1:go_default_library",
        "//vendor/github.com/google/go-containerregistry/v1/daemon:go_default_library",
        "//vendor/github.com/nightlyone/lockfile:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "apt_diff_test.go",
        "differs_test.go",
        "node_diff_test.go",
        "pip_diff_test.go",
        "rpm_diff_test.go",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/GoogleContainerTools/container-diff/differs",
    deps = [
        "//pkg/util:go_default_library",
        "//util:go_default_library",
        "//vendor/github.com/google/go-containerregistry/v1:go_default_library",
    ],
)
