load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "analyze_output_utils.go",
        "diff_output_utils.go",
        "diff_utils.go",
        "format_utils.go",
        "output_sort_utils.go",
        "output_text_utils.go",
        "package_diff_utils.go",
        "template_utils.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/container-diff/util",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util:go_default_library",
        "//vendor/code.cloudfoundry.org/bytefmt:go_default_library",
        "//vendor/github.com/pmezard/go-difflib/difflib:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "file_cache_test.go",
        "fs_utils_test.go",
        "output_sort_utils_test.go",
        "package_diff_utils_test.go",
        "tar_utils_test.go",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/GoogleCloudPlatform/container-diff/util",
    deps = [
        "//pkg/cache:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/containers/image/types:go_default_library",
        "//vendor/github.com/opencontainers/go-digest:go_default_library",
    ],
)
