load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["file_cache.go"],
    importpath = "github.com/GoogleCloudPlatform/container-diff/pkg/cache",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_containers_image//types:go_default_library",
        "@com_github_opencontainers_go_digest//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
