load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["file_cache.go"],
    importpath = "github.com/GoogleCloudPlatform/container-diff/pkg/cache",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/image:go_default_library",
        "//vendor/github.com/containers/image/types:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
