load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cloud_prepper.go",
        "daemon_prepper.go",
        "docker_utils.go",
        "fs_utils.go",
        "image_prep_utils.go",
        "image_utils.go",
        "tar_prepper.go",
        "tar_utils.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cache:go_default_library",
        "//vendor/github.com/containers/image/docker:go_default_library",
        "//vendor/github.com/containers/image/docker/daemon:go_default_library",
        "//vendor/github.com/containers/image/docker/tarfile:go_default_library",
        "//vendor/github.com/containers/image/pkg/compression:go_default_library",
        "//vendor/github.com/containers/image/types:go_default_library",
        "//vendor/github.com/docker/docker/client:go_default_library",
        "//vendor/github.com/docker/docker/pkg/system:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
