load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cloud_prepper.go",
        "daemon_prepper.go",
        "docker_utils.go",
        "fs_utils.go",
        "image_prep_utils.go",
        "image_utils.go",
        "tar_prepper.go",
        "tar_utils.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/container-diff/pkg/util",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/util/output:go_default_library",
        "@com_github_containers_image//docker:go_default_library",
        "@com_github_containers_image//docker/daemon:go_default_library",
        "@com_github_containers_image//docker/tarfile:go_default_library",
        "@com_github_containers_image//manifest:go_default_library",
        "@com_github_containers_image//pkg/compression:go_default_library",
        "@com_github_containers_image//types:go_default_library",
        "@com_github_docker_docker//client:go_default_library",
        "@com_github_docker_docker//pkg/system:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
