load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "fs_utils.go",
        "image_utils.go",
        "tar_utils.go",
        "test_utils.go",
    ],
    importpath = "github.com/GoogleContainerTools/container-diff/pkg/util",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/docker/docker/pkg/system:go_default_library",
        "//vendor/github.com/google/go-containerregistry/v1:go_default_library",
        "//vendor/github.com/google/go-containerregistry/v1/mutate:go_default_library",
        "//vendor/github.com/google/go-containerregistry/v1/partial:go_default_library",
        "//vendor/github.com/google/go-containerregistry/v1/types:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
